--- a/src/componentes/CampoTexto/index.css
+++ b/src/componentes/CampoTexto/index.css
@@ -6,10 +6,11 @@
     font-weight: bold;
     display: block;
     font-size: 18px;
+    margin-left: 5px;
 }
 
 .campo-texto input {
-    padding: 12px;
+    padding: 12px 0px 12px 12px;
     background-color: #FFF;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
